# VulkanLearn

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/headers/: EasyVulkan.hpp  GLFWGeneral.hpp  I18N.h  VKBase.h  VKUtil.h
src/shaders/: triangle.frag  triangle.vert
